# CIR2

./: CMakeLists.txt
Anglais/: cours.txt
DS/: CMakeLists.txt  main.cpp  vector.cpp  vector.hpp
DS2023/: CMakeLists.txt  fonctions.cpp  main.cpp
Semestre1/DS2023/: fonctions.cpp  fonctions.hpp
Semestre1/Shape_C++/: main.cpp
Semestre1/TD1/: CMakeLists.txt
Semestre1/TD1/TD1_1/: TD1_1.c
Semestre1/TD2/: CMakeLists.txt
Semestre1/TD3/: CMakeLists.txt
Semestre2/Cours/: Cours2.txt  Cours3.txt  Cours4.txt
Semestre2/TD1/: CMakeLists.txt  Exos.txt
Semestre2/TD2/: CMakeLists.txt  Exos.txt  main.cpp
Semestre2/TD3/: CMakeLists.txt  Exos.txt  main.cpp
Semestre2/TD4/: CMakeLists.txt  Exos.txt  main.cpp
Semestre2/TD5/: CMakeLists.txt  main.cpp
Semestre2/TD6/: CMakeLists.txt  Exos.txt  main.cpp
Shape_C++/: CMakeLists.txt  shape.cpp  shape.hpp
TD1/TD1_3/: TD1_3.c
TD1/TD1_5/: TD1_5.c
TD1/TD1_6/: TD1_6.c
TD1/TD1_7/: TD1_7.c
TD2/: CMakeLists.txt
TD2/Exo1/: main.cpp
TD2/Exo3/: main.cpp  texte.txt
TD2/Exo4/: Point3D.cpp  Point3D.hpp  main.cpp
TD2/TD2_2/: main.cpp
TD3/: CMakeLists.txt
TD3/TD3_1/: main.cpp
TD3/TD3_2/: Point2D.cpp  Point2D.hpp
TD3/TD3_3/: Vecteur.cpp  Vecteur.hpp
TD3/TD3_4/: Polygon.hpp  main.cpp
TD3/TD3_5/: classes.cpp  classes.hpp
TP1/: CMakeLists.txt  TP1.sln  TP1.vcxproj  main.c
TP1/TP1_2/: TP1_2.c
TP1/TP1_4/: TP1_4.c
Web/: test.js
Web/projet/: index.html  script.js  style.css
Web/seance3/: index.html  index.js
Web/seance4/: calc.js  index.html  style.css
tp_math/: TP2_S2.ipynb  TP3_S2.ipynb  tp2.py
(+7 files in other folders)
