cmake_minimum_required(VERSION 3.15)
project(CIR2)


add_subdirectory(TP1)
add_subdirectory(TP2)
add_subdirectory(TP3)
add_subdirectory(TP4)

add_executable(TP1_1 TP1_1.c)
add_executable(TP1_2 TP1_2.c)
add_executable(TP1_3 TP1_3.c)
add_executable(TP1_4 TP1_4.c)
add_executable(TP1_5 TP1_5.c)
add_executable(TP1_6 TP1_6.c)
add_executable(TP1_7 TP1_7.c)
add_executable(TP1_8 TP1_8.c)
